config-root/namespaces/jx-staging/jenkins-x-nodejs/jenkins-x-nodejs-svc.yaml
# Source: jenkins-x-nodejs/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-x-nodejs
  labels:
    chart: "jenkins-x-nodejs-1.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jenkins-x-nodejs-jenkins-x-nodejs
