config-root/namespaces/jx-staging/jenkins-x-nodejs/jenkins-x-nodejs-ingress.yaml
# Source: jenkins-x-nodejs/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jenkins-x-nodejs
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: jenkins-x-nodejs
              servicePort: 80
      host: jenkins-x-nodejs-jx-staging.192.168.64.2.nip.io
